# LIBUUAS

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md
bindings/python/: .gitignore  build_requirements.txt  setup.py
bindings/python/pylibuuas/: conversions.py  geotag.py  libuuas.py  libuuas_build.py  main.py  telem.py  uuaspb_pb2.py  waypoint.py
bindings/python/tests/: run-tests.sh  test_conversions.py  test_geotag.py  test_waypoint.py
bindings/rust/: .gitignore  Cargo.toml  build.rs
bindings/rust/src/: geotag.rs  lib.rs  libuuas.rs  main.rs  telem.rs  uuaspb.rs  wrapper.hpp
lib/: CMakeLists.txt
lib/include/libuuas/: bindings.hpp  geotag.hpp  utm.hpp  uuas.hpp  waypoint.hpp
lib/src/libuuas/: bindings.cpp  geotag.cpp  utm.cpp  uuas.cpp  uuaspb.pb.cc  uuaspb.pb.h  waypoint.cpp
lib/test/: test_bindings.cpp  test_geotag.cpp  test_main.cpp  test_utils.cpp  test_utils.hpp  test_utm.cpp  test_waypoint.cpp
shared/protobufs/: uuas.proto  uuaspb.proto
